--- a/style/style.css
+++ b/style/style.css
@@ -26,9 +26,9 @@ header {
 header > h1 {
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 60px;
+    font-size: 40px;
     text-align: center;
-    padding: 40px;
+    padding: 10px;
 }
 
 
@@ -38,7 +38,7 @@ body {
 }
 
 .container {
-    max-width: 940px;
+    max-width: 800px;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
@@ -46,8 +46,8 @@ body {
 
 .card {
     position: relative;
-    width: calc(100%/3 - 40px);
-    margin: 20px;
+    width: calc(100%/3 - 20px);
+    margin: 10px;
     padding: 20px;
     background-color: #fff;
 }
@@ -66,5 +66,35 @@ body {
 }
 
 .card p {
-    margin-top: 15px;
+    margin-top: 5px;
+}
+
+/* MEDIA QUERY */
+@media screen and (max-width: 800px) {
+    .container {
+        max-width: 600px;
+    }
+    .card {
+        width: calc(100%/2 - 20px);
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .container {
+        max-width: 300px;
+    }
+    .card {
+        width: calc(100% - 20px);
+    }
+}
+
+@media screen and (max-width: 250px) {
+    header > h1 {
+        font-size: 25px;
+    }
+
+    .card {
+        padding: 10px;
+        font-size: 12px;
+    }
 }
