--- a/style/style.css
+++ b/style/style.css
@@ -53,6 +53,7 @@ main {
 
 .card {
     position: relative;
+    transition: 0.3s;
     width: calc(100%/3 - 20px);
     margin: 10px;
     padding: 20px;
@@ -65,6 +66,7 @@ main {
     top: 0;
     left: 50%;
     translate: -50% -20%;
+    transition: 0.3s;
 }
 
 .card > img {
@@ -78,7 +80,7 @@ main {
 }
 
 
-.overlay {
+#overlay {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 10;
@@ -89,7 +91,7 @@ main {
     text-align: center;
 }
 
-.overlay > button {
+#overlay > #btn {
     position: absolute;
     left: 50%;
     top: 10%;
@@ -97,10 +99,11 @@ main {
     padding: 5px;
     border-radius: 50%;
     aspect-ratio: 1 / 1;
+    cursor: pointer;
 }
 
 
-.overlay > img {
+#overlay > img {
     position: absolute;
     top: 25%;
     left: 50%;
@@ -117,12 +120,13 @@ main {
     z-index: 5;
     transform: scale(1.1);
     rotate: 5deg;
-    transition: 0.3s;
     box-shadow: 6px 8px 6px rgb(14, 14, 14);
     cursor: pointer;
 }
 
-/* click */
+.card:hover .pin {
+    display: none;
+}
 
 
 /* MEDIA QUERY */
@@ -133,7 +137,7 @@ main {
     .card {
         width: calc(100%/2 - 20px);
     }
-    .overlay > img {
+    #overlay > img {
         max-width: 250px;
     }
 }
@@ -145,11 +149,11 @@ main {
     .card {
         width: calc(100% - 20px);
     }
-    .overlay > button {
+    #overlay > #btn {
         font-size: 12px;
         padding: 3px;
     }
-    .overlay > img {
+    #overlay > img {
         max-width: 150px;
     }
 }
@@ -171,7 +175,7 @@ main {
         padding: 10px;
     }
 
-    .overlay > img {
+    #overlay > img {
         max-width: 100px;
     }
 }
