--- a/style/style.css
+++ b/style/style.css
@@ -80,7 +80,8 @@ main {
     margin-top: 5px;
 }
 
-.card p::first-letter {
+.card p::first-letter,
+#overlay > p::first-letter {
     text-transform: uppercase;
 }
 
@@ -121,7 +122,7 @@ main {
     left: 50%;
     translate: -50%;
     color: white;
-    font-size: 60px;
+    font-size: 30px;
 }
 
 
