--- a/style/style.css
+++ b/style/style.css
@@ -101,11 +101,12 @@ main {
     left: 50%;
     top: 10%;
     translate: -50%;
+    max-height: 20vh;
     padding: 5px;
     border-radius: 50%;
     aspect-ratio: 1 / 1;
     cursor: pointer;
-    max-height: 20vh;
+    background-image: linear-gradient(to bottom, #70160d, #ab3a2f, #db564a)
 }
 
 #overlay > img {
