--- a/style/style.css
+++ b/style/style.css
@@ -76,6 +76,10 @@ main {
     object-fit: cover;
 }
 
+.img-placeholder {
+    display: block;
+}
+
 .card p {
     margin-top: 5px;
 }
@@ -85,9 +89,11 @@ main {
     text-transform: uppercase;
 }
 
+
+/* overlay */
 #overlay {
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.9);
     z-index: 10;
     top: 0;
     left: 0;
@@ -121,7 +127,7 @@ main {
 
 #overlay > p {
     position: absolute;
-    bottom: 1%;
+    bottom: 2%;
     left: 50%;
     translate: -50%;
     color: white;
